--- a/@ornikar/eslint-config-typescript/package.json
+++ b/@ornikar/eslint-config-typescript/package.json
@@ -2,7 +2,7 @@
   "name": "@ornikar/eslint-config-typescript",
   "version": "10.4.0",
   "description": "eslint typescript config files",
-  "repository": "ornikar/shared-configs",
+  "repository": "ornikar/eslint-configs",
   "main": "index.js",
   "license": "ISC",
   "engines": {
