--- a/@ornikar/eslint-config-node/package.json
+++ b/@ornikar/eslint-config-node/package.json
@@ -2,7 +2,7 @@
   "name": "@ornikar/eslint-config-node",
   "version": "10.3.0",
   "description": "eslint node config files",
-  "repository": "ornikar/shared-configs",
+  "repository": "ornikar/eslint-configs",
   "main": "index.js",
   "license": "ISC",
   "engines": {
