--- a/@ornikar/eslint-config-react/package.json
+++ b/@ornikar/eslint-config-react/package.json
@@ -2,7 +2,7 @@
   "name": "@ornikar/eslint-config-react",
   "version": "11.3.1",
   "description": "eslint react config files",
-  "repository": "ornikar/shared-configs",
+  "repository": "ornikar/eslint-configs",
   "main": "index.js",
   "license": "ISC",
   "engines": {
