refactor: typescript react dont import babel
BREAKING CHANGE: extending eslint-config-react will also require to extends eslint-config-babel

--- a/@ornikar/eslint-config-typescript-react/package.json
+++ b/@ornikar/eslint-config-typescript-react/package.json
@@ -12,6 +12,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@ornikar/eslint-config-typescript": "^12.3.0",
     "@ornikar/eslint-config-react": "^12.3.0",
     "eslint-config-prettier": "^6.7.0"
   },
