--- a/@ornikar/eslint-config-react/package.json
+++ b/@ornikar/eslint-config-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ornikar/eslint-config-react",
-  "version": "12.3.0",
+  "version": "13.0.0-alpha.0",
   "description": "eslint react config files",
   "repository": "ornikar/eslint-configs",
   "main": "index.js",
