--- a/@ornikar/eslint-config-typescript-react/package.json
+++ b/@ornikar/eslint-config-typescript-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ornikar/eslint-config-typescript-react",
-  "version": "12.3.0",
+  "version": "13.0.0-alpha.0",
   "description": "eslint typescript react config files",
   "repository": "ornikar/eslint-configs",
   "main": "index.js",
@@ -12,8 +12,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@ornikar/eslint-config-typescript": "^12.3.0",
-    "@ornikar/eslint-config-react": "^12.3.0",
+    "@ornikar/eslint-config-react": "^13.0.0-alpha.0",
+    "@ornikar/eslint-config-typescript": "^13.0.0-alpha.0",
     "eslint-config-prettier": "^6.7.0"
   },
   "peerDependencies": {
