--- a/@ornikar/eslint-config-babel/package.json
+++ b/@ornikar/eslint-config-babel/package.json
@@ -12,14 +12,18 @@
     "access": "public"
   },
   "dependencies": {
-    "@ornikar/eslint-config-babel-use": "^13.2.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "@ornikar/eslint-config": "^13.2.0",
     "babel-eslint": "^10.0.1",
-    "eslint-plugin-babel": "^5.3.0"
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prefer-class-properties": "^1.0.0"
   },
   "peerDependencies": {
-    "eslint": "^6.7.2"
+    "eslint": "^7.24.0",
+    "prettier": "^2.2.1"
   },
   "devDependencies": {
-    "eslint": "6.8.0"
+    "eslint": "7.24.0"
   }
 }
