--- a/@ornikar/eslint-config-formatjs/package.json
+++ b/@ornikar/eslint-config-formatjs/package.json
@@ -12,13 +12,13 @@
     "access": "public"
   },
   "dependencies": {
-    "eslint-plugin-formatjs": "^1.5.10"
+    "eslint-plugin-formatjs": "^2.14.6"
   },
   "peerDependencies": {
-    "eslint": "^5.0.0 || ^6.8.0",
-    "eslint-plugin-formatjs": "^1.5.10"
+    "eslint": "^7.24.0",
+    "eslint-plugin-formatjs": "^2.14.6"
   },
   "devDependencies": {
-    "eslint": "6.8.0"
+    "eslint": "7.24.0"
   }
 }
