--- a/@ornikar/eslint-config-typescript-react/package.json
+++ b/@ornikar/eslint-config-typescript-react/package.json
@@ -13,12 +13,16 @@
   },
   "dependencies": {
     "@ornikar/eslint-config-react": "^13.0.1",
-    "eslint-config-prettier": "^6.7.0"
+    "@ornikar/eslint-config-typescript": "^13.2.0"
   },
   "peerDependencies": {
-    "eslint": "^6.7.2"
+    "eslint": "^7.24.0",
+    "prettier": "^2.2.1"
   },
   "devDependencies": {
-    "eslint": "6.8.0"
+    "@types/react": "17.0.3",
+    "eslint": "7.24.0",
+    "react": "17.0.2",
+    "type-fest": "1.0.2"
   }
 }
