--- a/@ornikar/eslint-config-typescript/package.json
+++ b/@ornikar/eslint-config-typescript/package.json
@@ -12,15 +12,20 @@
     "access": "public"
   },
   "dependencies": {
-    "@ornikar/eslint-config-babel-use": "^13.2.0",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/parser": "^2.30.0",
-    "eslint-config-prettier": "^6.7.0"
+    "@ornikar/eslint-config": "^13.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prefer-class-properties": "^1.0.0"
   },
   "peerDependencies": {
-    "eslint": "^6.7.2"
+    "eslint": "^7.24.0",
+    "prettier": "^2.2.1"
   },
   "devDependencies": {
-    "eslint": "6.8.0"
+    "eslint": "7.24.0",
+    "type-fest": "1.0.2",
+    "typescript": "4.2.4"
   }
 }
