--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "yarn run lint:prettier && yarn run lint:eslint",
     "lint:prettier": "prettier --check .",
-    "lint:eslint": "eslint --ext .js --report-unused-disable-directives .",
+    "lint:eslint": "eslint --quiet --report-unused-disable-directives .",
     "release": "lerna publish --conventional-commits"
   },
   "prettier": "@ornikar/prettier-config",
@@ -23,14 +23,15 @@
   ],
   "devDependencies": {
     "@ornikar/commitlint-config": "3.2.0",
+    "@ornikar/lerna-config": "2.3.3",
     "@ornikar/prettier-config": "3.3.0",
     "@ornikar/repo-config": "5.2.0",
-    "@ornikar/lerna-config": "2.3.3",
-    "eslint": "6.8.0",
+    "check-package-dependencies": "1.2.4",
+    "eslint": "7.24.0",
     "eslint-plugin-filenames": "1.3.2",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-node": "10.0.0",
-    "eslint-plugin-unicorn": "14.0.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-unicorn": "30.0.0",
     "husky": "4.3.8",
     "lerna": "4.0.0",
     "prettier": "2.2.1",
