--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "repository": "ornikar/eslint-configs",
   "scripts": {
+    "postinstall": "ornikar-repo-config-postinstall",
     "lint": "yarn run lint:prettier && yarn run lint:eslint",
     "lint:prettier": "prettier --check .",
     "lint:eslint": "eslint --quiet --report-unused-disable-directives .",
@@ -32,7 +33,6 @@
     "eslint-plugin-import": "2.25.2",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-unicorn": "31.0.0",
-    "husky": "4.3.8",
     "lerna": "4.0.0",
     "prettier": "2.4.1",
     "yarnhook": "0.5.1"
