--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-unicorn": "31.0.0",
     "lerna": "4.0.0",
-    "prettier": "2.4.1",
-    "yarnhook": "0.5.1"
+    "prettier": "2.4.1"
   }
 }
