--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-unicorn": "39.0.0",
+    "eslint-plugin-jsx-expressions": "1.3.1",
     "lerna": "4.0.0",
     "prettier": "2.5.1"
   }
