--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,10 +15,10 @@
 
   // eslint config
   "eslint.workingDirectories": ["."],
+  "eslint.useESLintClass": true,
   "eslint.options": {
-    "extensions": [".js", ".mjs"],
     "resolvePluginsRelativeTo": ".",
-    "reportUnusedDisableDirectives": true
+    "reportUnusedDisableDirectives": "error"
   },
   "eslint.lintTask.enable": true,
 
