--- a/@ornikar/eslint-config-react/package.json
+++ b/@ornikar/eslint-config-react/package.json
@@ -19,7 +19,7 @@
     "eslint-plugin-react-hooks": "^4.3.0"
   },
   "peerDependencies": {
-    "eslint": "^7.32.0 || ^8.0.0"
+    "eslint": "^8.9.0"
   },
   "devDependencies": {
     "eslint": "8.9.0",
