--- a/@ornikar/eslint-config-typescript-react/package.json
+++ b/@ornikar/eslint-config-typescript-react/package.json
@@ -16,7 +16,7 @@
     "@ornikar/eslint-config-typescript": "^17.0.0"
   },
   "peerDependencies": {
-    "eslint": "^7.32.0 || ^8.0.0",
+    "eslint": "^8.9.0",
     "prettier": "^2.2.1"
   },
   "devDependencies": {
