--- a/@ornikar/eslint-config-typescript/package.json
+++ b/@ornikar/eslint-config-typescript/package.json
@@ -20,7 +20,7 @@
     "eslint-plugin-prefer-class-properties": "^1.0.0"
   },
   "peerDependencies": {
-    "eslint": "^7.32.0 || ^8.0.0",
+    "eslint": "^8.9.0",
     "prettier": "^2.2.1"
   },
   "devDependencies": {
