--- a/@ornikar/eslint-config/package.json
+++ b/@ornikar/eslint-config/package.json
@@ -22,7 +22,7 @@
     "eslint-plugin-unicorn": "^39.0.0"
   },
   "peerDependencies": {
-    "eslint": "^7.32.0 || ^8.0.0",
+    "eslint": "^8.9.0",
     "prettier": "^2.2.1"
   },
   "devDependencies": {
