--- a/@ornikar/eslint-config-formatjs/package.json
+++ b/@ornikar/eslint-config-formatjs/package.json
@@ -18,6 +18,11 @@
     "eslint": "^8.9.0",
     "eslint-plugin-formatjs": "^2.14.6"
   },
+  "peerDependenciesMeta": {
+    "eslint-plugin-formatjs": {
+      "optional": true
+    }
+  },
   "devDependencies": {
     "eslint": "8.9.0"
   }
