--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "check-package-dependencies": "3.6.0",
     "eslint": "8.14.0",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-n": "15.2.0",
     "eslint-plugin-unicorn": "42.0.0",
     "lerna": "4.0.0",
     "prettier": "2.6.2"
