--- a/@ornikar/eslint-config-formatjs/package.json
+++ b/@ornikar/eslint-config-formatjs/package.json
@@ -2,7 +2,11 @@
   "name": "@ornikar/eslint-config-formatjs",
   "version": "18.9.0",
   "description": "eslint formatjs config files",
-  "repository": "ornikar/eslint-configs",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ornikar/eslint-configs.git",
+    "directory": "@ornikar/eslint-config-formatjs"
+  },
   "main": "index.js",
   "license": "ISC",
   "engines": {
