--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "release": "lerna publish --conventional-commits"
   },
   "prettier": "@ornikar/prettier-config",
+  "packageManager": "yarn@3.2.1",
   "engines": {
-    "node": ">=14.17.5",
-    "yarn": ">=1.10.1"
+    "node": ">= 16.15.1"
   },
   "commitlint": {
     "extends": [
@@ -35,6 +35,5 @@
     "eslint-plugin-unicorn": "42.0.0",
     "lerna": "5.1.6",
     "prettier": "2.7.1"
-  },
-  "packageManager": "yarn@3.2.1"
+  }
 }
