--- a/@ornikar/eslint-config-typescript-nestjs/package.json
+++ b/@ornikar/eslint-config-typescript-nestjs/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0-pre",
   "description": "eslint typescript nestjs config files",
   "repository": {
+    "directory": "@ornikar/eslint-config-typescript-nestjs",
     "type": "git",
-    "url": "https://github.com/ornikar/eslint-configs.git",
-    "directory": "@ornikar/eslint-config-typescript-nestjs"
+    "url": "https://github.com/ornikar/eslint-configs.git"
   },
   "main": "index.js",
   "license": "ISC",
@@ -25,5 +25,8 @@
   },
   "devDependencies": {
     "eslint": "8.22.0"
+  },
+  "scripts": {
+    "lint:eslint": "yarn ../.. lint:eslint @ornikar/eslint-config-typescript-nestjs"
   }
 }
