--- a/@ornikar/eslint-config-typescript-react/package.json
+++ b/@ornikar/eslint-config-typescript-react/package.json
@@ -3,9 +3,9 @@
   "version": "19.2.0",
   "description": "eslint typescript react config files",
   "repository": {
+    "directory": "@ornikar/eslint-config-typescript-react",
     "type": "git",
-    "url": "https://github.com/ornikar/eslint-configs.git",
-    "directory": "@ornikar/eslint-config-typescript-react"
+    "url": "https://github.com/ornikar/eslint-configs.git"
   },
   "main": "index.js",
   "license": "ISC",
@@ -28,5 +28,8 @@
     "eslint": "8.22.0",
     "react": "17.0.2",
     "type-fest": "2.19.0"
+  },
+  "scripts": {
+    "lint:eslint": "yarn ../.. lint:eslint @ornikar/eslint-config-typescript-react"
   }
 }
