--- a/@ornikar/eslint-config-react/package.json
+++ b/@ornikar/eslint-config-react/package.json
@@ -3,9 +3,9 @@
   "version": "19.2.0",
   "description": "eslint react config files",
   "repository": {
+    "directory": "@ornikar/eslint-config-react",
     "type": "git",
-    "url": "https://github.com/ornikar/eslint-configs.git",
-    "directory": "@ornikar/eslint-config-react"
+    "url": "https://github.com/ornikar/eslint-configs.git"
   },
   "main": "index.js",
   "license": "ISC",
@@ -29,5 +29,8 @@
   "devDependencies": {
     "eslint": "8.22.0",
     "react": "17.0.2"
+  },
+  "scripts": {
+    "lint:eslint": "yarn ../.. lint:eslint @ornikar/eslint-config-react"
   }
 }
