--- a/@ornikar/eslint-config-typescript/package.json
+++ b/@ornikar/eslint-config-typescript/package.json
@@ -3,9 +3,9 @@
   "version": "19.2.0",
   "description": "eslint typescript config files",
   "repository": {
+    "directory": "@ornikar/eslint-config-typescript",
     "type": "git",
-    "url": "https://github.com/ornikar/eslint-configs.git",
-    "directory": "@ornikar/eslint-config-typescript"
+    "url": "https://github.com/ornikar/eslint-configs.git"
   },
   "main": "index.js",
   "license": "ISC",
@@ -31,5 +31,8 @@
     "eslint": "8.22.0",
     "type-fest": "2.19.0",
     "typescript": "4.7.4"
+  },
+  "scripts": {
+    "lint:eslint": "yarn ../.. lint:eslint @ornikar/eslint-config-typescript"
   }
 }
