--- a/@ornikar/eslint-config/package.json
+++ b/@ornikar/eslint-config/package.json
@@ -3,9 +3,9 @@
   "version": "19.2.0",
   "description": "eslint config files",
   "repository": {
+    "directory": "@ornikar/eslint-config",
     "type": "git",
-    "url": "https://github.com/ornikar/eslint-configs.git",
-    "directory": "@ornikar/eslint-config"
+    "url": "https://github.com/ornikar/eslint-configs.git"
   },
   "main": "index.js",
   "license": "ISC",
@@ -33,5 +33,8 @@
   "devDependencies": {
     "eslint": "8.22.0",
     "prettier": "2.7.1"
+  },
+  "scripts": {
+    "lint:eslint": "yarn ../.. lint:eslint @ornikar/eslint-config"
   }
 }
