--- a/@ornikar/eslint-config-typescript-nestjs/package.json
+++ b/@ornikar/eslint-config-typescript-nestjs/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "@ornikar/eslint-config-typescript": "^19.4.0",
-    "eslint-plugin-prefer-arrow-functions": "^3.1.4"
+    "eslint-plugin-prefer-arrow-functions": "^3.1.4",
+    "eslint-plugin-tsdoc": "^0.2.17"
   },
   "peerDependencies": {
     "eslint": "^8.18.0",
