--- a/@ornikar/eslint-config-babel/package.json
+++ b/@ornikar/eslint-config-babel/package.json
@@ -30,6 +30,6 @@
     "eslint": "8.27.0"
   },
   "scripts": {
-    "lint:eslint": "yarn ../.. lint:eslint @ornikar/eslint-config-babel"
+    "lint:eslint": "yarn ../.. eslint --report-unused-disable-directives --quiet @ornikar/eslint-config-babel"
   }
 }
