--- a/@ornikar/eslint-config-formatjs/.vscode/settings.json
+++ b/@ornikar/eslint-config-formatjs/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "eslint.workingDirectories": ["../../"]
+  "eslint.workingDirectories": ["../../"],
+  "jest.rootPath": "../..",
+  "jest.jestCommandLine": "node_modules/.bin/jest --config jest.config.js --roots ./@ornikar/eslint-config-formatjs/src"
 }
