--- a/@ornikar/eslint-config-typescript-react/package.json
+++ b/@ornikar/eslint-config-typescript-react/package.json
@@ -30,6 +30,6 @@
     "type-fest": "3.2.0"
   },
   "scripts": {
-    "lint:eslint": "yarn ../.. lint:eslint @ornikar/eslint-config-typescript-react"
+    "lint:eslint": "yarn ../.. eslint --report-unused-disable-directives --quiet @ornikar/eslint-config-typescript-react"
   }
 }
