--- a/@ornikar/eslint-plugin-ornikar/package.json
+++ b/@ornikar/eslint-plugin-ornikar/package.json
@@ -32,7 +32,9 @@
     "eslint-plugin-react": "^7.33.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "2.1.2",
     "@typescript-eslint/rule-tester": "6.7.0",
-    "@typescript-eslint/utils": "6.7.0"
+    "@typescript-eslint/utils": "6.7.0",
+    "eslint": "8.48.0"
   }
 }
