--- a/renovate.json
+++ b/renovate.json
@@ -2,14 +2,14 @@
   "extends": ["config:js-lib", "github>ornikar/renovate-presets:frontend"],
   "packageRules": [
     {
-      "packagePatterns": ["^eslint-"],
-      "packageNames": ["eslint", "typescript"],
+      "matchPackagePatterns": ["^eslint-"],
+      "matchPackageNames": ["eslint", "typescript"],
       "masterIssue": false,
       "schedule": ["at any time"],
       "reviewers": ["team:frontend-architects"]
     },
     {
-      "packagePatterns": ["^@typescript-eslint/"],
+      "matchPackagePatterns": ["^@typescript-eslint/"],
       "matchSourceUrlPrefixes": ["https://github.com/typescript-eslint/typescript-eslint"],
       "masterIssue": false,
       "schedule": ["at any time"],
