--- a/@ornikar/eslint-plugin-ornikar/package.json
+++ b/@ornikar/eslint-plugin-ornikar/package.json
@@ -36,5 +36,8 @@
     "@typescript-eslint/rule-tester": "6.7.2",
     "@typescript-eslint/utils": "6.7.2",
     "eslint": "8.49.0"
+  },
+  "engines": {
+    "node": ">=18.18.0"
   }
 }
