--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "test:removethissuffixafternode18update": "node --test",
     "postinstall": "ornikar-repo-config-postinstall",
     "release": "lerna publish --conventional-commits",
+    "test": "node --test",
     "version": "ornikar-monorepo-update-peer-dependencies && YARN_ENABLE_IMMUTABLE_INSTALLS=false yarn && git add yarn.lock"
   },
   "prettier": "@ornikar/prettier-config",
   "packageManager": "yarn@3.6.3",
   "engines": {
-    "node": ">=16.10.0"
+    "node": ">=18.18.0"
   },
   "commitlint": {
     "extends": [
