feat(eslint-plugin-ornikar): add typescript-no-unused-exports rule

--- a/@ornikar/eslint-plugin-ornikar/fixtures/tsconfig.json
+++ b/@ornikar/eslint-plugin-ornikar/fixtures/tsconfig.json
@@ -3,6 +3,7 @@
     "jsx": "preserve",
     "target": "es5",
     "module": "commonjs",
+    "moduleDetection": "force",
     "strict": true
   },
   "include": ["**/*.ts", "**/*.tsx"]
