--- a/@ornikar/eslint-plugin-ornikar/package.json
+++ b/@ornikar/eslint-plugin-ornikar/package.json
@@ -29,12 +29,13 @@
     ".": "./index.js"
   },
   "dependencies": {
-    "eslint-plugin-react": "^7.33.2"
+    "@typescript-eslint/utils": "6.8.0",
+    "eslint-plugin-react": "^7.33.2",
+    "ts-unused-exports": "^10.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "2.1.2",
     "@typescript-eslint/rule-tester": "6.8.0",
-    "@typescript-eslint/utils": "6.8.0",
     "eslint": "8.51.0"
   },
   "engines": {
