--- a/@ornikar/eslint-plugin-ornikar/package.json
+++ b/@ornikar/eslint-plugin-ornikar/package.json
@@ -19,7 +19,13 @@
     ]
   },
   "peerDependencies": {
-    "eslint": "^8.39.0"
+    "eslint": "^8.39.0",
+    "typescript": ">=5.2.2"
+  },
+  "peerDependenciesMeta": {
+    "typescript": {
+      "optional": true
+    }
   },
   "scripts": {
     "lint:eslint": "yarn ../.. eslint --report-unused-disable-directives --quiet @ornikar/eslint-plugin-ornikar"
@@ -36,7 +42,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "2.1.2",
     "@typescript-eslint/rule-tester": "6.8.0",
-    "eslint": "8.51.0"
+    "eslint": "8.51.0",
+    "typescript": "5.2.2"
   },
   "engines": {
     "node": ">=18.18.0"
