--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.18, 20.x]
+        node-version: [20.x]
 
     steps:
       - uses: actions/checkout@v4
@@ -29,17 +29,17 @@ jobs:
 
       - name: Prettier
         run: yarn run lint:prettier
-        if: startsWith(matrix.node-version, '18.')
+        if: startsWith(matrix.node-version, '20.')
 
       - name: Eslint
         run: yarn run lint:eslint
 
       - name: Tests
         run: yarn run test
-        if: startsWith(matrix.node-version, '18.')
+        if: startsWith(matrix.node-version, '20.')
 
       - name: Check working directory is clean
-        if: startsWith(matrix.node-version, '18.')
+        if: startsWith(matrix.node-version, '20.')
         run: |
           if [ -n "$(git status --porcelain)" ]; then
             echo "Working directory not clean:"
