--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "@ornikar/*"
   ],
   "devDependencies": {
-    "@ornikar/commitlint-config": "6.0.0",
-    "@ornikar/monorepo-config": "12.1.0",
-    "@ornikar/prettier-config": "7.0.0",
-    "@ornikar/repo-config": "13.1.1",
+    "@ornikar/commitlint-config": "6.0.2-canary.c3a4bbaff039ee004c9871c01aeb483ed485a32f.0",
+    "@ornikar/monorepo-config": "12.1.1-canary.c3a4bbaff039ee004c9871c01aeb483ed485a32f.0",
+    "@ornikar/prettier-config": "7.0.1-canary.c3a4bbaff039ee004c9871c01aeb483ed485a32f.0",
+    "@ornikar/repo-config": "13.2.2-canary.c3a4bbaff039ee004c9871c01aeb483ed485a32f.0",
     "check-package-dependencies": "7.0.0",
     "eslint": "8.54.0",
     "eslint-plugin-import": "2.29.0",
