--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2.1
 # -------------------------------------------------------------------------------------------------
 
 orbs:
-  frontend: ornikar/frontend-orb@15.12.0
+  frontend: ornikar/frontend-orb@16.1.1
 
 # -------------------------------------------------------------------------------------------------
 # WORKFLOWS
@@ -54,6 +54,22 @@ workflows:
             branches:
               ignore: main
 
+      - frontend/monorepo-release-gcp:
+          name: prerelease-gcp
+          context: npm-gcp
+          npm-publish: true
+          no-private: true
+          branch-release: true
+          exact: true
+          requires:
+            - dependencies
+            - checks
+            - lint
+            - hold-prerelease
+          filters:
+            branches:
+              ignore: main
+
       # release
       - hold-release:
           type: approval
@@ -66,6 +82,20 @@ workflows:
           no-private: true
           exact: true
           context: npm-publish
+          requires:
+            - dependencies
+            - checks
+            - lint
+            - hold-release
+          filters:
+            branches:
+              only: main
+
+      - frontend/monorepo-release-gcp:
+          npm-publish: true
+          no-private: true
+          exact: true
+          context: npm-gcp
           requires:
             - dependencies
             - checks
